--- a/src/style.scss
+++ b/src/style.scss
@@ -214,7 +214,7 @@ input.input:read-only {
   background-clip: padding-box;
 
   &:hover {
-    background-color: $primary;
+    background-color: white;
   }
 }
 
